kubernetes/home/ai/open-webui/open-webui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
  namespace: ai
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: open-webui
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      containers:
        - name: open-webui
          image: openwebui/open-webui:0.10.2-slim
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /app/backend/data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: open-webui-data
---
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: ai
spec:
  selector:
    app: open-webui
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui
  namespace: ai
  annotations:
    kubernetes.io/ingress.class: traefik
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Open WebUI
    gethomepage.dev/group: AI
    gethomepage.dev/icon: open-webui
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: 'traefik-forwardauth-authelia@kubernetescrd'
    external-dns.alpha.kubernetes.io/enabled: "true"
    external-dns.alpha.kubernetes.io/hostname: open-webui.saturn.ci
    external-dns.alpha.kubernetes.io/target: direct.saturn.ci
spec:
  tls:
    - secretName: open-webui.saturn.ci
      hosts:
        - open-webui.saturn.ci
  rules:
    - host: "open-webui.saturn.ci"
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: open-webui
                port:
                  number: 8080
